Send chat on enter key press,remove green background propert from css

--- a/css/chatStyle.css
+++ b/css/chatStyle.css
@@ -8,7 +8,7 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: #27ae60;
+    background: #32465a;
     font-family: "proxima-nova", "Source Sans Pro", sans-serif;
     font-size: 1em;
     letter-spacing: 0.1px;
