Word-break css added

--- a/css/chatStyle.css
+++ b/css/chatStyle.css
@@ -716,7 +716,8 @@
 
 @media screen and (min-width: 735px) {
     #frame .content .messages ul li p {
-        max-width: 300px;
+        max-width: 50%;
+        word-wrap: break-word;
     }
 }
 
