--- a/css/chatStyle.css
+++ b/css/chatStyle.css
@@ -836,3 +836,10 @@
     height: 100%;
     width:100%;
 }
+#logout-button{
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    margin: 5px 0 0 0;
+}
