--- a/css/chatStyle.css
+++ b/css/chatStyle.css
@@ -8,7 +8,7 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: #27ae60;
+    background: #32465a;
     font-family: "proxima-nova", "Source Sans Pro", sans-serif;
     font-size: 1em;
     letter-spacing: 0.1px;
@@ -622,6 +622,7 @@
     border-radius: 50%;
     float: left;
     margin: 9px 12px 0 9px;
+    cursor:pointer;
 }
 
 #frame .content .contact-profile p {
@@ -828,4 +829,48 @@
 
 .row {
     display: flex;
+}
+#cprof {
+    display: inline-block;
+    background-color: white;
+}
+#pcard{
+    height: 100%;
+    width:100%;
+    display: inline-grid;
+}
+.card-image{
+            max-height:250px;
+            max-width:250px;
+            margin:auto;
+            position: relative; 
+        }
+.display-pic{
+}
+.card{
+    margin-top: 0;
+    background-color: white;
+}
+.cardLabel{
+  font-size: 22px;
+  padding-top: 2%;
+  color:green !important;
+
+}
+.card-content{
+    padding:0 !important;
+    text-align: center;
+}
+#userName p{
+    font-size: 40px;
+}
+.card-content p{
+    padding-top: 5px;
+}
+.wrappie{
+    height:50%;
+    width:50%;
+}
+.exit-card{
+    margin-bottom: 37px;
 }
