Star msg in mobile view,removed random extra lines in index

--- a/css/chatStyle.css
+++ b/css/chatStyle.css
@@ -352,6 +352,18 @@
 #frame #sidepanel .wrap .starred:active {
     background: #32465a;
 }
+@media screen and (max-width:735px) {
+    #frame .wrap .starred {
+        float:none;
+        font-size: 1.4em;
+        left:-6px;
+    }
+}
+@media screen and (max-width:735px){
+    #frame .wrap .starred span {
+        display: none;
+    }
+}
 
 #frame #sidepanel #search {
     border-top: 1px solid #32465a;
