Added starred message display

--- a/css/chatStyle.css
+++ b/css/chatStyle.css
@@ -914,3 +914,13 @@
 .exit-card{
     margin-top: 25px;
 }
+#stardisplay {
+    display: inline-block;
+}
+.stardisplay ul li p {
+    display: inline-block;
+    padding: 10px 15px;
+    border-radius: 20px;
+    max-width: 500px;
+    line-height: 130%;
+}
