Dynamically loading userContacts and scrollable contacts list

--- a/css/chatStyle.css
+++ b/css/chatStyle.css
@@ -449,6 +449,10 @@
     cursor: pointer;
 }
 
+#contacts {
+	padding-bottom: 128px;
+}
+
 @media screen and (max-width: 735px) {
     #frame #sidepanel #contacts ul li.contact {
         padding: 6px 0 46px 8px;
