--- a/css/chatStyle.css
+++ b/css/chatStyle.css
@@ -857,7 +857,7 @@
 .row {
     display: flex;
 }
-#cprof {
+#cprof, #uprof, #background, #eprof, #starredMsgs {
     display: inline-block;
     background-color: white;
 }
@@ -874,19 +874,11 @@
     border-radius: 50%;
     margin: 5px 0 0 0;
 }
-.message-input{
-    visibility:hidden;
-}
-.contact-profile{
-    visibility:hidden;
-}
 .card-image{
     max-height:250px;
     max-width:250px;
     margin:auto;
     position: relative;
-}
-.display-pic{
 }
 .card{
     margin-top: 0;
