--- a/css/chatStyle.css
+++ b/css/chatStyle.css
@@ -869,6 +869,7 @@
     height: 100%;
     width:100%;
     overflow: hidden;
+    overflow-y: scroll;
     margin-top: 0;
 }
 #logout-button{
@@ -897,7 +898,7 @@
 .card-content{
     text-align: center;
 }
-#userName p{
+#uprof #userName p, #cprof #userName p {
     font-size: 40px;
 }
 .card-content p{
@@ -930,3 +931,12 @@
 #starmessages {
     overflow-y:auto;
 }
+#eprof .card-content .input-field{
+    margin-top: 0 !important;
+}
+#eprof .card-content input{
+    width:40% !important;
+    font-size: 20px;
+    height:2rem !important;
+    text-align: center !important;
+} 
