added pointers for searching contact and clearing search contact bar

--- a/css/chatStyle.css
+++ b/css/chatStyle.css
@@ -1070,3 +1070,9 @@ Rachna Saluja - Search Contact - Result List
     margin: 0 0 0 1px;
     opacity: .5;
 }
+#clearSearchContactBar{
+    cursor: pointer;
+}
+.fa.fa-search{
+    cursor: pointer;
+}
